--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2017",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "isolatedModules": false,
-    "jsx": "react",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "strict": true,
+    "sourceMap": true,
     "noImplicitAny": true,
-    "noImplicitUseStrict": false,
     "noImplicitReturns": true,
-    "allowUnreachableCode": false,
-    "removeComments": true,
-    "noLib": false,
     "rootDir": "src/",
     "outDir": "lib/",
     "declaration": true,
-    "declarationDir": "lib/",
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "strictNullChecks": true
-  },
-  "filesGlob": [
-    "src/**/*.ts"
-  ],
-  "compileOnSave": true,
-  "buildOnSave": false,
-  "atom": {
-    "rewriteTsconfig": false
+    "declarationDir": "lib/"
   }
 }
