--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc",
     "clean": "rm -rf lib",
     "distclean": "npm run clean && rm -rf node_modules npm-debug.log",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "test": "npm run build && mocha -R spec --colors lib/test --timeout 30000"
   },
   "dependencies": {
@@ -43,7 +43,6 @@
   "main": "./lib/viz",
   "types": "./lib/vis.d.ts",
   "files": [
-    "doc",
     "lib",
     "static"
   ]
